# oracle

./: .gitignore  Anchor.toml  CURRENT_STATUS.md  Cargo.toml  ERROR_HANDLING.md  LOCAL_TESTING.md  QUICKSTART.md  README.md  SECURITY.md  SYSTEMD_SETUP.md  V3_README.md  build-with-fix.sh  close_and_init.cjs  history  init_new_program.cjs  migrate_to_10assets.cjs  oracle-keypair.json  package-lock.json  package.json  read_new_state.cjs  read_test_state.cjs  reinit.ts  reinit_state.cjs  relay1.json  relay2.json  relay3.json  relay4.json  simple_close_init.cjs  test-local.sh  test_10_assets.cjs  test_8asset_state.mjs  test_batch_8assets.mjs  test_batch_simple.cjs  test_init_8assets.cjs  test_live_update.cjs  test_relay_update.cjs  test_server.mjs  test_state.mjs  test_stocks.mjs  test_tsla.mjs
app/: .gitignore  CONTROLLER_RELAY_README.md  CONTROLLER_SUMMARY.md  MIGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SERVER.md  STOCK_INTEGRATION_SUMMARY.md  dashboard-server.ts  dashboard-tokens.ts  o3.cjs  package.json  pm2-launcher.cjs  pm2-stdin-wrapper.cjs  pyth_sim.cjs  read.js  relay-dashboard.mjs  server.js  server.js.b  server.mjs  simulate.js  systemd-start.sh  test-aggregation.ts  test-e2e.ts  test-jupiter.ts  test_zec.js  tsconfig.json  update.js  wallet-to-base58.js
programs/oracle-v3/: Cargo.toml
programs/oracle-v3/src/: errors.rs  lib.rs
programs/oracle-v3/src/instructions/: admin.rs  mod.rs
programs/oracle-v3/src/state/: asset_config.rs  mod.rs  price_data.rs  registry.rs
systemd/: oracle-client.service
tests/: oracle.js  oracle.ts
(+53 files in other folders)
